# truenorth

./: README.md
code/truenorth/: Cargo.toml  rust-toolchain.toml  sdkconfig.defaults
code/truenorth/.cargo/: config.toml
code/truenorth/src/: magsensor.rs  main.rs  math.rs  motor.rs  smartvar.rs
code/truenorth/src/magsensor/: mlx90393.rs  mlx90393_defs.rs  mlx90393_inner.rs
