[package]
name = "truenorth"
version = "0.1.0"
authors = ["Otávio Ribeiro <otavio.ribeiro@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "truenorth"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-sys = "0.36.1"
esp-idf-hal = "0.45.2"
esp32-nimble = "0.11.0"
async-executor = "1.4"
async-io = "2"
rand = "0.8"


[build-dependencies]
embuild = "0.33"
